objects/Integration_Queue__c.object
<CustomObject>
    <fields>
        <fullName>EBS_Order_Sync_Process_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to tag all integration queue records for a given Order Sync process</description>
        <inlineHelpText>Used to tag all integration queue records for a given Order Sync process</inlineHelpText>
        <label>EBS Order Sync Process Id</label>
        <referenceTo>EBS_Order_Sync_Framework__c</referenceTo>
        <relationshipLabel>Integration Queues</relationshipLabel>
        <relationshipName>Integration_Queues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Field10__c</fullName>
        <label>Field10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field11__c</fullName>
        <label>Field11</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field12__c</fullName>
        <label>Field12</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By_Email__c</fullName>
        <label>Last Modified By Email</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Object_ID__c</fullName>
        <externalId>true</externalId>
        <label>Object ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Queue__c</fullName>
        <label>Queue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SF_Record__c</fullName>
        <formula>HYPERLINK('/' &amp; Object_ID__c,  Queue__c &amp; 'Record URL')</formula>
        <label>SF Record</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isNumber__c</fullName>
        <formula>ISNUMBER(Field3__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isNumber</label>
        <type>Checkbox</type>
    </fields>
    <description>Queue to store items waiting integration</description>
    <label>Integration Queue</label>
    <nameField>
        <displayFormat>I-{0000000}</displayFormat>
        <label>Integration Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Queues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>Accounts_Today</fullName>
        <columns>NAME</columns>
        <columns>Field1__c</columns>
        <columns>EBS_Order_Sync_Process_Id__c</columns>
        <columns>Message__c</columns>
        <columns>Object_ID__c</columns>
        <columns>Queue__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Queue__c</field>
            <operation>equals</operation>
            <value>Account</value>
        </filters>
        <label>Accounts Today</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Address_Today</fullName>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>NAME</columns>
        <columns>EBS_Order_Sync_Process_Id__c</columns>
        <columns>Object_ID__c</columns>
        <columns>Queue__c</columns>
        <columns>Field13__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <columns>Message__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Queue__c</field>
            <operation>equals</operation>
            <value>Address__c</value>
        </filters>
        <label>Address Today</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Queue__c</columns>
        <columns>Object_ID__c</columns>
        <columns>Status__c</columns>
        <columns>Message__c</columns>
        <columns>Field1__c</columns>
        <columns>Field2__c</columns>
        <columns>Field3__c</columns>
        <columns>Field20__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All22</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Queue__c</columns>
        <columns>Object_ID__c</columns>
        <columns>Status__c</columns>
        <columns>Message__c</columns>
        <columns>Field1__c</columns>
        <columns>Field2__c</columns>
        <columns>Field3__c</columns>
        <columns>Field20__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Queue__c</field>
            <operation>equals</operation>
            <value>Opportunity</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Opportunities Today</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Address_Records</fullName>
        <columns>NAME</columns>
        <columns>Message__c</columns>
        <columns>Object_ID__c</columns>
        <columns>Queue__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Field16__c</columns>
        <columns>Field11__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Queue__c</field>
            <operation>equals</operation>
            <value>Address__c</value>
        </filters>
        <label>All Address Records</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Address_Records_ROL</fullName>
        <columns>NAME</columns>
        <columns>Message__c</columns>
        <columns>Object_ID__c</columns>
        <columns>Queue__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Field16__c</columns>
        <columns>Field11__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Queue__c</field>
            <operation>equals</operation>
            <value>Address__c</value>
        </filters>
        <filters>
            <field>Field20__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All Address Records Update ROL</label>
    </listViews>
    <listViews>
        <fullName>All_Address_Records_ROL_Processed</fullName>
        <columns>NAME</columns>
        <columns>Message__c</columns>
        <columns>Object_ID__c</columns>
        <columns>Queue__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Field16__c</columns>
        <columns>Field11__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Queue__c</field>
            <operation>equals</operation>
            <value>Address__c</value>
        </filters>
        <filters>
            <field>Field20__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Processed</value>
        </filters>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>All Address Records Update ROL Processed</label>
    </listViews>
    <listViews>
        <fullName>All_Exp_Records</fullName>
        <columns>NAME</columns>
        <columns>Message__c</columns>
        <columns>Object_ID__c</columns>
        <columns>Queue__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Field16__c</columns>
        <columns>Field11__c</columns>
        <columns>Field1__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Queue__c</field>
            <operation>contains</operation>
            <value>Expense</value>
        </filters>
        <label>All Expense Records</label>
    </listViews>
    <listViews>
        <fullName>All_Opportunities</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Queue__c</columns>
        <columns>Object_ID__c</columns>
        <columns>Status__c</columns>
        <columns>Message__c</columns>
        <columns>Field1__c</columns>
        <columns>Field2__c</columns>
        <columns>Field3__c</columns>
        <columns>Field20__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Queue__c</field>
            <operation>equals</operation>
            <value>Opportunity</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Processed</value>
        </filters>
        <label>All - Opportunities Queued</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Opportunities_in_Queued</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Queue__c</columns>
        <columns>Object_ID__c</columns>
        <columns>Status__c</columns>
        <columns>Message__c</columns>
        <columns>Field1__c</columns>
        <columns>Field2__c</columns>
        <columns>Field3__c</columns>
        <columns>Field20__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Queue__c</field>
            <operation>equals</operation>
            <value>Opportunity</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Queue</value>
        </filters>
        <label>All - Opportunities - in Queued</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Opps_Processed</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Queue__c</columns>
        <columns>Object_ID__c</columns>
        <columns>Status__c</columns>
        <columns>Message__c</columns>
        <columns>Field1__c</columns>
        <columns>Field2__c</columns>
        <columns>Field3__c</columns>
        <columns>Field20__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Queue__c</field>
            <operation>equals</operation>
            <value>Opportunity</value>
        </filters>
        <label>All Opps Processed</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Queued</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Queue__c</columns>
        <columns>Object_ID__c</columns>
        <columns>Status__c</columns>
        <columns>Message__c</columns>
        <columns>Field1__c</columns>
        <columns>Field2__c</columns>
        <columns>Field3__c</columns>
        <columns>Field20__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>contains</operation>
            <value>queued,processing</value>
        </filters>
        <label>All Queued</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Records</fullName>
        <columns>NAME</columns>
        <columns>Message__c</columns>
        <columns>Object_ID__c</columns>
        <columns>Queue__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Field16__c</columns>
        <columns>Field11__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Records</label>
    </listViews>
    <listViews>
        <fullName>All_Records_Processed</fullName>
        <columns>NAME</columns>
        <columns>Message__c</columns>
        <columns>Object_ID__c</columns>
        <columns>Queue__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Field16__c</columns>
        <columns>Field11__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Processed</value>
        </filters>
        <label>All Records Processed</label>
    </listViews>
    <listViews>
        <fullName>All_SO_Records</fullName>
        <columns>NAME</columns>
        <columns>Field1__c</columns>
        <columns>Object_ID__c</columns>
        <columns>Message__c</columns>
        <columns>Status__c</columns>
        <columns>Queue__c</columns>
        <columns>Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Field11__c</columns>
        <columns>Field16__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Queue__c</field>
            <operation>equals</operation>
            <value>Opportunity</value>
        </filters>
        <label>All Sales Orders Records</label>
    </listViews>
</CustomObject>